 * fix scan wrongly throwing assertion error (CASSANDRA-2653)
 * Always use even distribution for merkle tree with RandomPartitionner
   (CASSANDRA-2841)
 * allow deleting a row and updating indexed columns in it in the
   same mutation (CASSANDRA-2773)
 * improve cli treatment of multiline comments (CASSANDRA-2852)
 * fix describeOwnership for OPP (CASSANDRA-2800)


0.7.6
 * force GC to reclaim disk space on flush, if necessary (CASSANDRA-2404)
 * move gossip heartbeat back to its own thread (CASSANDRA-2554)
 * fix incorrect use of NBHM.size in ReadCallback that could cause
   reads to time out even when responses were received (CASSAMDRA-2552)
 * trigger read repair correctly for LOCAL_QUORUM reads (CASSANDRA-2556)
 * correctly reject query with missing mandatory super columns and validate
   super column name in Deletion (CASSANDRA-2571)
 * refuse to apply migrations with older timestamps than the current 
   schema (CASSANDRA-2536)
 * faster flushes and compaction from fixing excessively pessimistic 
   rebuffering in BRAF (CASSANDRA-2581)
 * include indexes in snapshots (CASSANDRA-2596)
 * improve ignoring of obsolete mutations in index maintenance (CASSANDRA-2401)
 * recognize attempt to drop just the index while leaving the column
   definition alone (CASSANDRA-2619)
 * Don't allow {LOCAL|EACH}_QUORUM unless strategy is NTS (CASSANDRA-2627)
 * Fix regression where bootstrapping a node with no schema fails
   (CASSANDRA-2625)
 * Allow removing LocationInfo sstables (CASSANDRA-2632)
 * avoid attempting to replay mutations from dropped keyspaces (CASSANDRA-2631)
 * avoid using cached position of a key when GT is requested (CASSANDRA-2633)
 * fix counting bloom filter true positives (CASSANDRA-2637)
 * initialize local ep state prior to gossip startup if needed (CASSANDRA-2638)
 * fix empty Result with secondary index when limit=1 (CASSANDRA-2628)
 * add quote-escaping via backslash to CLI (CASSANDRA-2623)
 * fix pig example script (CASSANDRA-2487)