@@ -24,8 +24,10 @@ import java.nio.charset.CharacterCodingException;
 import java.util.*;
 
 import org.apache.cassandra.config.CFMetaData;
+import org.apache.cassandra.config.ConfigurationException;
 import org.apache.cassandra.config.DatabaseDescriptor;
 import org.apache.cassandra.db.DecoratedKey;
+import org.apache.cassandra.gms.VersionedValue;
 import org.apache.cassandra.service.StorageService;
 import org.apache.cassandra.utils.ByteBufferUtil;
 import org.apache.cassandra.utils.FBUtilities;
@@ -134,6 +136,12 @@ public class OrderPreservingPartitioner implements IPartitioner<StringToken>
         public String toString(Token<String> stringToken)
         {
             return stringToken.token;
+        }
+
+        public void validate(String token) throws ConfigurationException
+        {
+            if (token.contains(VersionedValue.DELIMITER_STR))
+                throw new ConfigurationException("Tokens may not contain the character " + VersionedValue.DELIMITER_STR);
         }
 
         public Token<String> fromString(String string)
